# Hexagon_Task_Server

./: CMakeLists.txt  README.md  httprequest.cpp  httprequest.h  httprequesthandler.cpp  httprequesthandler.h  httpresponse.cpp  httpresponse.h  httpsocket.cpp  httpsocket.h  main.cpp  mytcpserver.cpp  mytcpserver.h  requestdispatcher.cpp  requestdispatcher.h
